[hui] Made slider far less sensible, fixed overflow

--- a/hide_hl/res/ui/style/hui-slider.less
+++ b/hide_hl/res/ui/style/hui-slider.less
@@ -4,6 +4,7 @@ hui-slider {
 	max-width: 200px;
 	height: @widget-base-height;
 	layout: stack;
+	overflow: hidden;
 
 	background-type: hui;
 	> hui-background {
